# vmware_devq

./: README.md
devq_ws/src/dev_robot_control_sdk/: CMakeLists.txt  IMU数据获取说明.md  LICENSE  ROS使用说明.md  lie_down.sh  package.xml  passive.sh  rl_model.sh  robot_server.sh  robot_server_rl.sh  soft_stop.sh  stand_up.sh  stop_control.sh  stop_robot.sh  walk_forward.sh  常用命令.txt  控制流程图.md  项目说明.md
devq_ws/src/dev_robot_control_sdk/config/: devq.yaml
devq_ws/src/dev_robot_control_sdk/include/robot_control/: remote_control.h  robot.h  robot_control.h  robot_data.h  ros_state_publisher.h
devq_ws/src/dev_robot_control_sdk/include/robot_control/fsm/: fsm_state.h  fsm_state_lie_down.h  fsm_state_passive.h  fsm_state_rl_model.h  fsm_state_soft_stop.h  fsm_state_stand_up.h
devq_ws/src/dev_robot_control_sdk/model/devq/: policy.mnn
devq_ws/src/dev_robot_control_sdk/sensorimotor_interface/include/: sensorimotor_interface.h
devq_ws/src/dev_robot_control_sdk/src/: main.cpp  remote_control.cpp  robot.cpp  robot_control.cpp
robot_dog_control/: README.md  joint_test.py  rl_controller.py  test_joints_control.py
robot_dog_control/rl_model/: devq_flat_观察空间.md  policy_1.pt
robot_dog_control/rl_model/devq/urdf/: devq.urdf
robot_dog_control/rl_model/devq/urdf/devq/: devq.usd
robot_dog_control/ros1_ws/src/robot_command_publisher/: CMakeLists.txt  package.xml
robot_dog_control/ros1_ws/src/robot_command_publisher/src/: command_publisher.cpp
robot_dog_control/scripts/: robot_control.sh  setup_network.sh
(+2 files in other folders)
