<?xml version="1.0"?>
<package format="2">
  <name>robot_command_publisher</name>
  <version>0.1.0</version>
  <description>Package for publishing control commands to robot dog</description>
  
  <maintainer email="user@example.com">ROS User</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package> 